mensaje automatico generado para el sql.rev250

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -158,7 +158,7 @@
 	[% END %] <!-- End de If estadoColeccion  -->
 	
 
-         <h4><span class="badge badge-warning">[% cantItemN1 %]</span>&nbsp;&nbsp;[% "Ejemplares" | i18n %]</h4>
+         <h4><span class="badge badge-warning" style="cursor: default;">[% cantItemN1 %]</span>&nbsp;&nbsp;[% "Ejemplares" | i18n %]</h4>
          <br />
 
 		</div>
