--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
@@ -145,7 +145,7 @@ function updateMostrarModificarCampo(responseText){
 }
 
 function cancelarEstructuraCatalogacion(){
-    $("#resultAgregarCampo").slideUp('slow');
+    $("#resultAgregarCampo").modal('hide');
     //y borrar variables, objetos y arrays
     inicializar();
 }   
