--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/datosUsuario.tmpl
@@ -335,16 +335,16 @@ $(document).ready(function(){
 
     <div id="resultBusqueda">
 	<!-- 	DETALLE USUARIO -->
-	<div id="detalleUsuario"></div>
+	<section id="detalleUsuario"></section>
 		
 	<!--DETALLE DE PRESTAMOS-->
-	<div id="prestamos"></div>
+	<section id="prestamos"></section>
 	
 	<!-- DETALLE DE RESERVAS -->
-	<div id="reservas"></div>
+	<section id="reservas"></section>
 	
 	<!-- DETALLE DE SANCIONES -->
-	<div id="sanciones"></div>
+	<section id="sanciones"></section>
 
 
     <div class="accordion" id="historico_prestamos_usuario">
