--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -184,9 +184,7 @@ $(document).ready( function() {
         <h3>[% 'Datos del Indice' | i18n %]</h3>
     </div>
     <div class="modal-body">
-        <textarea id="indice_id" style="width:519px; height:202px; max-width:650px">
-            [% indice_data | trim %]
-        </textarea>
+        <textarea id="indice_id" style="width:519px; height:202px; max-width:650px">[% indice_data | trim %]</textarea>
         
         
     </div>
