--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -242,9 +242,8 @@
                                     <h3>[% 'Datos del Indice' | i18n %]</h3>
                                 </div>
                                 <div class="modal-body">
-                                    <textarea id="indice_id" style="width:519px; height:202px; max-width:650px">
-                                        [% indice | trim %]
-                                    </textarea>
+                                    <textarea id="indice_id" style="width:519px; height:202px; max-width:650px">[% indice | trim %]</textarea>
+                                    
                                 </div>
                                 <div class="modal-footer">
                                     [% PERL %]
