--- a/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
@@ -7,9 +7,13 @@
 <script>
 
     function exportarPDF(){
-        $('#form_export').submit();
+        $('#accion').val('EXPORTAR_PDF');
+        $('#form_reporte_busquedas').submit();
     }
 
+    function updateExportarPDF(responseText){
+        
+    }
     
     $(document).ready(function(){
     });
