--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -50,6 +50,60 @@
 		}
     </script>
 
+        <script type="text/javascript">
+        
+        function refreshPage(fileName, responseJSON){
+           
+            jAlert(responseJSON.error,fileName);
+            
+        }
+        
+        function closeModalIndice(){
+        	$('#indice_data'+ID2_file).modal('hide');
+        }
+        
+        function uploadCompleteCloseModal(evt) {
+            clearInterval(intervalTimer);
+                $('#'+'progressIndicator' + '_' + ID2_file + ' > div').removeClass('active');
+            $('#'+'progressIndicator' + '_' + ID2_file + ' > div').removeClass('progress-striped');
+                var uploadResponse = document.getElementById('uploadResponse' + '_' + ID2_file);
+            uploadResponse.innerHTML = evt.target.responseText;
+            uploadResponse.style.display = 'block';
+            setTimeout(closeModalIndice, 2000)
+        }
+        
+        function uploadIndice(id2,url) {
+            previousBytesLoaded = 0;
+            ID2_file = id2;
+            document.getElementById('uploadResponse' + '_' + ID2_file).style.display = 'none';
+            document.getElementById('progressNumber' + '_' + ID2_file).innerHTML = '';
+            var progressBar = document.getElementById('progressBar' + '_' + ID2_file);
+            progressBar.style.display = 'block';
+            progressBar.style.width = '0px';
+
+            /*
+             * If you want to upload only a file along with arbitary data that is not in
+             * the form, use this
+             */
+            var fd = new FormData();
+            fd.append("id2", id2);
+            fd.append("fileToUpload", document.getElementById('fileToUpload' + '_'
+                    + ID2_file).files[0]);
+
+            /* If you want to simply post the entire form, use this */
+            // var fd = document.getElementById('form1').getFormData();
+            xhr = new XMLHttpRequest();
+            xhr.upload.addEventListener("progress", uploadProgress, false);
+            xhr.addEventListener("load", uploadCompleteCloseModal, false);
+            xhr.addEventListener("error", uploadFailed, false);
+            xhr.addEventListener("abort", uploadCanceled, false);
+            xhr.open("POST", url);
+            xhr.send(fd);
+
+            intervalTimer = setInterval(updateTransferSpeed, 500);
+        }
+        </script>
+        
 <script type="text/javascript" src="/includes/jquery/jquery.jPrintElement.js"></script>
 	<script src="/intranet-tmpl/includes/circulacion-min.js"></script>
 	<script src="/intranet-tmpl/includes/catalogacion-min.js"></script>
@@ -179,6 +233,12 @@
                         </div>                   
                    </div>
                  </legend>
+                    [% IF mensaje_group %]
+                            <div class="alert [% mensaje_class %]">
+                                    <strong>[% 'Info' | i18n %]</strong> [% mensaje_group %]
+                            </div>
+                    [% END %]
+                 
 	                <div id="grupo[% id2 %]" class="grupo[% id2 %]">
                          [% IF isbn %]
                              <div class="right">
@@ -231,7 +291,78 @@
 								              <h3>[% 'Indice del grupo' | i18n %]</h3>
 								            </div>
 								            <div class="modal-body">
-								              <pre>[% indice | trim %]</pre>
+									              <pre>[% indice | trim %]</pre>
+				                                    [% IF hay_indice_file %]
+				                                           [% PERL %]
+				                                               print C4::AR::Filtros::link_to( text =>     " [% 'Contenido del &iacute;ndice' |i18n %]",
+				                                                                               url =>      "getIndiceFile.pl", 
+				                                                                               params =>   ["id2=[% id2 %]"],
+				                                                                               title =>    "[% 'Contenido del &iacute;ndice' |i18n %]",
+				                                                                               icon => "icon-file",
+				                                                                           ) ;
+				                                           [% END %]
+				                                           [% PERL %]
+				                                               print C4::AR::Filtros::action_link_button( 
+				                                                                               title =>     "X",
+				                                                                               url =>      "deleteIndice.pl", 
+				                                                                               params =>   ["id2=[% id2 %]","id1=[% id1 %]"],
+				                                                                               button =>    "btn-small btn-danger close",
+				                                                                               
+				                                                                           ) ;
+				                                           [% END %]				                                           
+				                                    [% ELSE %]
+										                    <div id="file-uploader_[% id2 %]" class="form-horizontal">
+										                        <form id="form_file-uploader_[% id2 %]" enctype="multipart/form-data" method="post" 
+										                                action="[% url_prefix %]/catalogacion/estructura/uploadIndice.pl">
+										                               <input type="hidden" name="id2" id="id2" value="[% id2 %]" /><br />
+										                               <div class="control-group">
+										                                <label class="control-label" for="fileToUpload_[% id2 %]">[% "Seleccione un archivo" | i18n %]</label>
+										                                <div class="controls">
+										                                    <input type="file" name="fileToUpload" id="fileToUpload_[% id2 %]" onchange="fileSelected([% id2 %]);"/>
+										                                </div>  
+										                              </div>
+										                              <div id="fileInfo_[% id2 %]" class="alert alert-info hide">
+										                                <div id="fileName_[% id2 %]" class="fileName"></div>
+										                                <div id="fileSize_[% id2 %]" class="fileSize"></div>
+										                                <div id="fileType_[% id2 %]" class="fileType"></div>
+										                              </div>
+										                              
+										          
+										                              <div class="row"></div>
+										                              <div id="progressIndicator_[% id2 %]" class="progressIndicator hide" > 
+										
+										                                <div  class="progress progress-success progress-striped active">
+										                                  <div id="progressBar_[% id2 %]" class="bar"></div>
+										                                </div>
+										                                <div id="progressNumber_[% id2 %]" class="floatRight">&nbsp;</div>
+										                                <div class="clear"></div>
+										                                <div>
+										                                  <div id="transferSpeedInfo_[% id2 %]" class="floatLeft" style="width: 80px;">&nbsp;</div>
+										                                  <div id="timeRemainingInfo_[% id2 %]" class="floatLeft" style="margin-left: 10px;">&nbsp;</div>
+										                                  <div id="transferBytesInfo_[% id2 %]" class="floatRight" style="text-align: right;">&nbsp;</div>
+										                                  <div class="clear"></div>
+										                                </div>    
+										                                <div id="uploadResponse_[% id2 %]" class="uploadResponse"></div>
+										                              </div>  
+										                              
+										                              
+										                              <div class="form-actions">
+										                                <div class="controls">
+										                                      [% PERL %]
+										                                              print C4::AR::Filtros::action_button( 
+										                                                                              button         => "btn btn-primary click",
+										                                                                              action       => 'uploadIndice("[% id2 %]","[% url_prefix %]/catalogacion/estructura/uploadIndice.pl")', 
+										                                                                              icon         => "",
+										                                                                              title        => "[% 'Subir archivo' | i18n %]",
+										                                                                          ) ;
+										    
+										                                      [% END %]
+										                                </div>
+										                                    
+										                              </div>
+										                        </form>
+										                    </div>				                                    
+				                                    [% END %]
 								            </div>
 
                             </div>
@@ -243,7 +374,7 @@
                                 </div>
                                 <div class="modal-body">
                                     <textarea id="indice_id" style="width:519px; height:202px; max-width:650px">[% indice | trim %]</textarea>
-                                    
+                                                                    
                                 </div>
                                 <div class="modal-footer">
                                     [% PERL %]
