--- a/intranet/htdocs/intranet-tmpl/usuarios/reales/libre_deuda.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/reales/libre_deuda.tmpl
@@ -5,7 +5,7 @@
 
 <fieldset class="">
     <div class="encabezado">
-        <img src="[% escudo %]" alt="escudo" width="80px" height="100px" /><img src="[% escudoUI %]" alt="escudoUI" width="120px" height="90px" align="right" /><br>
+        <div width="400px"><img src="[% escudo %]" alt="escudo" width="80px" height="100px" /><img src="[% escudoUI %]" alt="escudoUI" width="120px" height="90px" align="right" /></div><br>
         [% biblio.titulo_formal %]<br>
         [% "BIBLIOTECA" | i18n  %]<br>
         [% biblio.getNombrePDF %]<br><br>
@@ -46,7 +46,7 @@
                 <br />
                 <br />
           [% END %]
-          [% "Firma" | i18n  %]  ..........................   [% "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Aclaraci&oacute;n" | i18n  %]     .......................... <br> 
+          [% "Firma" | i18n  %]  ..........................   [% "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Aclaraci&oacute;n" | i18n  %]     .......................... <br> 
                
         </div>
        
