--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -318,13 +318,13 @@
 										                               <div class="control-group">
 										                                <label class="control-label" for="fileToUpload_[% id2 %]">[% "Seleccione un archivo" | i18n %]</label>
 										                                <div class="controls">
-										                                    <input type="file" name="fileToUpload" id="fileToUpload_[% id2 %]" onchange="fileSelected([% id2 %]);"/>
+										                                    <input type="file" name="indiceToUpload" id="indiceToUpload_[% id2 %]" onchange="fileSelectedIndice([% id2 %]);"/>
 										                                </div>  
 										                              </div>
-										                              <div id="fileInfo_[% id2 %]" class="alert alert-info hide">
-										                                <div id="fileName_[% id2 %]" class="fileName"></div>
-										                                <div id="fileSize_[% id2 %]" class="fileSize"></div>
-										                                <div id="fileType_[% id2 %]" class="fileType"></div>
+										                              <div id="indiceInfo_[% id2 %]" class="alert alert-info hide">
+										                                <div id="indiceName_[% id2 %]" class="fileName"></div>
+										                                <div id="indiceSize_[% id2 %]" class="fileSize"></div>
+										                                <div id="indiceType_[% id2 %]" class="fileType"></div>
 										                              </div>
 										                              
 										          
