generacion de etiquetas

--- a/intranet/htdocs/intranet-tmpl/reports/usuarios.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/usuarios.tmpl
@@ -18,7 +18,7 @@
                                  content   => [ {id => 'labels', text=> "[% 'Generar etiquetas' | i18n %]" },
                                                 {id => 'registro', text => "[% 'Registro de usuarios' | i18n %]"},
                                               ],
-                                 content_id=> ['reportes_usuarios'],
+                                 content_id=> 'reportes_usuarios',
                                  active_id => 'labels',
     
     );
