--- a/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/catalogo.tmpl
@@ -1,6 +1,4 @@
 [% INCLUDE 'intranet-top.inc' %] 
-[% INCLUDE 'BootstrapToolkit.inc' %]
-
 [% USE HTML %]
 
 
@@ -18,21 +16,23 @@
                                  content   => [ {id => 'labels', text=> "[% 'B&uacute;squedas' | i18n %]" },
                                                 {id => 'registro', text => "[% 'Otro' | i18n %]"},
                                               ],
-                                 content_id=> ['reportes_usuarios'],
+                                 content_id=> 'reportes_catalogo',
                                  active_id => 'labels',
     
     );
 
 [% END %]
 
+        
         <div class="tab-pane fade in active" id="labels">
             [% INCLUDE 'partials/reportes/_reporte_busquedas.inc' %]
         </div>
         <div class="tab-pane fade" id="registro">
-          <p></p>
+            [% INCLUDE 'partials/reportes/_reporte_gen_etiquetas.inc' %]
         </div>
       </div>
 </section>
+
 
 [% INCLUDE 'intranet-bottom.inc' %]
 
