mensaje automatico generado para el sql.rev254

--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/prestamos_vencidos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/prestamos_vencidos.tmpl
@@ -61,9 +61,8 @@
             for(i = 0; i < checkeds.length; i++) {
                 selected.push(checkeds[i].id);
             }
-            
+            return true;
         }else{
-        
             jAlert(POR_FAVOR_SELECCIONE_ALGUN_PRESTAMO);
             return false;
             
