--- a/intranet/htdocs/intranet-tmpl/admin/global/catalogoResultConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/catalogoResultConfig.tmpl
@@ -1,42 +1,44 @@
-<fieldset>
-    <div>
-        
-        [% PERL %]
-            print C4::AR::Filtros::tableHeader(   
-                            id              => "preferenciasCatalogo_table",
-                            class           => "",
-                            selectAll_id    => "",
-                            columns         => ['[% "Variable"|i18n %]','[% "Valor"|i18n %]','[% "Explicaci&oacute;n"|i18n %]',
-                                                '[% "Editar"|i18n %]' ]
-                        ) ;
-        [% END %]
+[% INCLUDE "intranet-top.inc" %]
+
+<form class="form-horizontal" action="[% url_prefix %]/admin/global/catalogo_config.pl?token=[% token %]" method="post">
+    <fieldset class="resultados_busqueda">
+    <legend>[% "Administraci&oacute;n de preferencias de Cat&oacute;logo" | i18n %]</legend>
+
+    <input type="hidden" id="editando" name="editando" value="1">
     
-
-        <tbody>
-        [% FOREACH preferencia IN preferencias %]
-            <tr>
-                <td>[% preferencia.getVariable %]</td>
-                <td>[% preferencia.getShowValue %]</td>
-                <td>[% preferencia.getExplanation %]</td>
-                <td>                  
-                    [% PERL %]
-                          print C4::AR::Filtros::action_button( 
-                                                    button         => "btn btn-primary click",
-                                                    action       => 'modificarVariable("[% preferencia.getVariable %]","[% preferencia.getType %]");', 
-                                                    icon         => "icon-white icon-edit",
-                                                  ) ;
-
-
-                    [% END %]
-                </td>
+            [% FOREACH preferencia IN preferencias %]
             
-            </tr>
-        
-        [% END %]
-        
-            </tbody>
-        </table>
-    </div>
-</fieldset>
+                <div class="control-group">
+                    <label class="control-label">[% preferencia.preferencia.getLabel | i18n %]</label>
+                    <div class="controls">
+                    
+                        [% IF preferencia.valor %]
+                            [%  preferencia.valor %]
+                        [% ELSE %]
+                            <input id="valor" type="text" size="50" name="valor">
+                        [% END %]
+                        
+                        [% IF preferencia.tabla %]<input type="hidden" id="[% preferencia.preferencia.getId %]_tabla" value="[% preferencia.tabla %]">[% END %]
+                        [% IF preferencia.campo %]<input type="hidden" id="[% preferencia.preferencia.getId %]_campo" value="[% preferencia.campo %]">[% END %]
+                        
+                        [% PERL %]
+                            print C4::AR::Filtros::setHelpInput(   
+                                                text        => "[% preferencia.preferencia.getExplanation | i18n %]",
+                                        ) ;
+                            
+                        [% END %]
+                    </div>
+                </div>
 
-<div id="divResultado" style="clear: both;"></div>
+            [% END %]
+    <div class="form-actions">
+        [% PERL %]
+                    print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar Cambios' | i18n %]",
+                                                        type    => "submit",
+                                                        boton   => "boton_agregar",
+                            ) ;
+        [% END %]
+    </div>
+</form>
+
+[% INCLUDE "intranet-bottom.inc" %]
