fix en detalle de ejemplar - historiales de circulacion y disponibilidad #4468

--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalleEjemplarCirculacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalleEjemplarCirculacion.tmpl
@@ -20,7 +20,7 @@ $(document).ready(function(){
 		            </div>
 		
 		            <div class="control-group">
-		                <label class="control-label" for="fecha_final">[% "Fecha Inicial" | i18n %]</label>
+		                <label class="control-label" for="fecha_final">[% "Fecha Final" | i18n %]</label>
 		                <div class="controls">
 		                    <input type=text id="fecha_final" class="required" data-datepicker="datepicker"  name="fecha_final" value="[% fecha_final %]">
 		                </div>
