--- a/intranet/htdocs/intranet-tmpl/admin/global/catalogoResultConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/catalogoResultConfig.tmpl
@@ -1,6 +1,36 @@
 [% INCLUDE "intranet-top.inc" %]
 
-<form class="form-horizontal" action="[% url_prefix %]/admin/global/catalogo_config.pl?token=[% token %]" method="post">
+<script type="text/javascript">
+
+    var prefBooleanas = new Array();
+
+    [% FOREACH pref IN preferenciasBooleanas %]
+    
+        prefBooleanas.push('[% pref.variable %]');
+
+    [% END %]
+
+
+    //actualizo los input hidden con los valores de los radio button de bootstrap
+    function guardarPreferencias(){
+
+        for(pref in prefBooleanas){
+
+            if($('#radios_' + prefBooleanas[pref] + '').find('.active').text() == "Si"){
+                $('#' + prefBooleanas[pref] +'').val(1);
+            }else{
+                $('#' + prefBooleanas[pref] +'').val(0);
+            }
+            
+        }
+
+        $('#formPreferenciasCatalogo').submit();
+
+    }
+
+</script>
+
+<form id="formPreferenciasCatalogo" onclick="return false;" class="form-horizontal" action="[% url_prefix %]/admin/global/catalogo_config.pl?token=[% token %]" method="post">
     <fieldset class="resultados_busqueda">
     <legend>[% "Administraci&oacute;n de preferencias de Cat&oacute;logo" | i18n %]</legend>
 
@@ -36,6 +66,7 @@
                     print C4::AR::Filtros::to_Button(   text    => "[% 'Guardar Cambios' | i18n %]",
                                                         type    => "submit",
                                                         boton   => "boton_agregar",
+                                                        onclick => "guardarPreferencias();"
                             ) ;
         [% END %]
     </div>
