--- a/intranet/htdocs/intranet-tmpl/admin/global/circResultConfig.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/global/circResultConfig.tmpl
@@ -16,7 +16,7 @@
 
         for(pref in prefBooleanas){
 
-            if($('#radios_' + prefBooleanas[pref] + '').find('.active').text() == "Si"){
+            if($('#radios_' + prefBooleanas[pref] + '').find('.active').text() == "[% PERL %] print 'Si' | i18n; [% END %]"){
                 $('#' + prefBooleanas[pref] +'').val(1);
             }else{
                 $('#' + prefBooleanas[pref] +'').val(0);
