--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -231,6 +231,8 @@ $(document).ready( function() {
 
 <!--            Manejo del Nivel 2 -->
 <div id="nivel2Tabla" style="display:none">
+
+    [% INCLUDE  "estructura/link_a_registro.tmpl" %]
         
     <form id="formNivel2" name="formNivel2" class="form-horizontal" onsubmit="return false;">
 		  <fieldset>
