fix en responder mensajes de contacto #4481

--- a/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/ver_mensaje.tmpl
@@ -22,7 +22,7 @@
 
 </div>
 <div class="modal-footer">
-  <div id="btn_enviar"  class="left" hidden>
+  <div id="btn_enviar"  class="left" style="display: none;">
            [% PERL %]
                    print C4::AR::Filtros::action_button( 
                                                    button       => "btn btn-primary click",
