--- a/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/mensajes_contacto.tmpl
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="/includes/css/wysiwyg.css" type="text/css" media="screen"/>
 
 <script type="text/javascript">
+var objAH;
       $(document).ready(function() {
         $('.fancy_link').fancybox({
             'frameWidth':   600,
