--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ejemplaresDelGrupo.tmpl
@@ -13,7 +13,7 @@
             <div class="accordion-group">
               <div class="accordion-heading">
                 <a class="accordion-toggle" data-toggle="collapse" data-parent="#ejemplares_del_grupo_[% id2 %]" href="#ejemplares_[% id2 %]">
-                  [% "Ejemplares" | i18n %] ([% disponibles %])
+                  [% "Ejemplares" | i18n %] <span class="badge badge-warning" style="cursor: default;">[% cant_ejemplares %]</span>
                 </a>
               </div>
               <div id="ejemplares_[% id2 %]" class="accordion-body collapse in">
